force-app/main/default/objects/Reflection_CMPHAM__c/Reflection_CMPHAM__c.object-meta.xml
<CustomObject>
    <description>Created By: CMPHAM
Buisness Unit: Alphaforce
Purpose: Apprentices will be able to submit their daily reflections.</description>
    <label>Reflection CMPHAM</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reflection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reflections CMPHAM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>