force-app/main/default/objects/Reflection_CMPHAM__c/fields/Activities_Projects_Finish_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>Activities_Projects_Finish_CMPHAM__c</fullName>
    <description>Created by: CMPHAM
Business Unit: Alphaforce
Purpose: Shows what the activities or projects the apprentice completed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What activities or projects did you complete?</inlineHelpText>
    <label>What activities/projects did you finish?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>