force-app/main/default/objects/Reflection_CMPHAM__c/fields/BLKR_any_blocker_today_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>BLKR_any_blocker_today_CMPHAM__c</fullName>
    <description>Created By: CMP
Business Unit: Alphaforce
Purpose: This will indicate if the apprentice has a blocker today or not.</description>
    <inlineHelpText>Did you encounter a blocker today?</inlineHelpText>
    <label>Did you have any blocker today?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>