force-app/main/default/objects/Reflection_CMPHAM__c/fields/BLKR_Describe_solution_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>BLKR_Describe_solution_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: This is the details of the solution the apprentice ran into during the blocker.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What was details to your solution to your blocker you ran into today?</inlineHelpText>
    <label>Describe the blocker solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>