force-app/main/default/objects/Reflection_CMPHAM__c/fields/BLKR_Describe_your_blocker_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>BLKR_Describe_your_blocker_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce 
Purpose: This is where the apprentice will describe their blocker they ran into today.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What are the details on the blocker you encountered today?</inlineHelpText>
    <label>Describe your blocker</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>