force-app/main/default/objects/Reflection_CMPHAM__c/fields/BLKR_End_Date_Time_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>BLKR_End_Date_Time_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: This shows the end time of the blocker the apprentices encountered.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the end time that you worked on your blocker?</inlineHelpText>
    <label>Blocker End Date/Time</label>
    <type>DateTime</type>
</CustomField>