force-app/main/default/objects/Reflection_CMPHAM__c/fields/BLKR_Next_steps_resolving_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>BLKR_Next_steps_resolving_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: This will show the next steps to resolving the blocker that the apprentice is running into.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the next steps to resolving the blocker that you are running into?</inlineHelpText>
    <label>Next steps to resolving your blocker?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>