force-app/main/default/objects/Reflection_CMPHAM__c/fields/BLKR_Time_Spent_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>BLKR_Time_Spent_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: A formula that will automatically calculate how long an apprentice spend working on a blocker</description>
    <formula>IF(
( BLKR_End_Date_Time_CMPHAM__c - BLKR_Start_Date_Time_CMPHAM__c ) &gt; 0 ,
TEXT(FLOOR(BLKR_End_Date_Time_CMPHAM__c - BLKR_Start_Date_Time_CMPHAM__c)) &amp; &quot; days &quot;
&amp; TEXT(FLOOR(MOD((BLKR_End_Date_Time_CMPHAM__c - BLKR_Start_Date_Time_CMPHAM__c ) * 24, 24))) &amp; &quot; hours &quot;
&amp; TEXT(ROUND(MOD((BLKR_End_Date_Time_CMPHAM__c - BLKR_Start_Date_Time_CMPHAM__c ) * 24 * 60, 60), 0)) &amp;&quot; minutes&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates time spent on blocker</inlineHelpText>
    <label>Blocker Time Spent</label>
    <type>Text</type>
</CustomField>