force-app/main/default/objects/Reflection_CMPHAM__c/fields/BLKR_trail_module_and_unit_name_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>BLKR_trail_module_and_unit_name_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: This states the trails, modules, &amp; unit that the apprentice encountered during their blocker.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the trails, modules, &amp; unit name of the blocker you encountered today?</inlineHelpText>
    <label>Blocker trail, module, and unit name?</label>
    <type>TextArea</type>
</CustomField>