force-app/main/default/objects/Reflection_CMPHAM__c/fields/BLKR_Was_there_a_solution_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>BLKR_Was_there_a_solution_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: This is where the apprentice states if their solution to their blocker is resolved or not.</description>
    <inlineHelpText>Was there a solution to your blocker today?</inlineHelpText>
    <label>Blocker Solution?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>