force-app/main/default/objects/Reflection_CMPHAM__c/fields/SB_any_speed_bump_today_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>SB_any_speed_bump_today_CMPHAM__c</fullName>
    <description>Created By: CMP
Business Unit: Alphaforce 
Purpose: Showing if the apprentice has any speedbumps for the day.</description>
    <inlineHelpText>Did you have any speedbumps today?</inlineHelpText>
    <label>Did you have any speed bump today?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>