force-app/main/default/objects/Reflection_CMPHAM__c/fields/SB_Describe_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>SB_Describe_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: This is the description of the speedbump the apprentice ran into.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the details of the speedbump you ran into today?</inlineHelpText>
    <label>Describe your speedbump</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>