force-app/main/default/objects/Reflection_CMPHAM__c/fields/SB_Describe_the_solution_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>SB_Describe_the_solution_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: This is the details of the solution the apprentice ran into during the speedbump.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What was details to your solution to your speedbump you ran into today?</inlineHelpText>
    <label>Describe the speedbump solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>