force-app/main/default/objects/Reflection_CMPHAM__c/fields/SB_End_Date_Time_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>SB_End_Date_Time_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: This shows the end time of the speedbump the apprentice encountered.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the end time that you worked on your speedbump?</inlineHelpText>
    <label>Speedbump End Date/Time</label>
    <type>DateTime</type>
</CustomField>