force-app/main/default/objects/Reflection_CMPHAM__c/fields/SB_Start_Date_Time_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>SB_Start_Date_Time_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: This will show the start time of the speedbump the apprentice is working on.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the start time of the speedbump?</inlineHelpText>
    <label>Speedbump Start Date/Time</label>
    <type>DateTime</type>
</CustomField>