force-app/main/default/objects/Reflection_CMPHAM__c/fields/SB_Time_Spent_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>SB_Time_Spent_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: A formula that will automatically calculate how long an apprentice spend working on a speedbump</description>
    <formula>IF(
(  SB_End_Date_Time_CMPHAM__c   -  SB_Start_Date_Time_CMPHAM__c  ) &gt; 0 ,
TEXT(FLOOR(SB_End_Date_Time_CMPHAM__c   -  SB_Start_Date_Time_CMPHAM__c)) &amp; &quot; days &quot;
&amp; TEXT(FLOOR(MOD((SB_End_Date_Time_CMPHAM__c   -  SB_Start_Date_Time_CMPHAM__c ) * 24, 24))) &amp; &quot; hours &quot;
&amp; TEXT(ROUND(MOD((SB_End_Date_Time_CMPHAM__c   -  SB_Start_Date_Time_CMPHAM__c ) * 24 * 60, 60), 0)) &amp;&quot; minutes&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates time spent on speedbump</inlineHelpText>
    <label>Speedbump Time Spent</label>
    <type>Text</type>
</CustomField>