force-app/main/default/objects/Reflection_CMPHAM__c/fields/SB_trail_module_and_unit_name_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>SB_trail_module_and_unit_name_CMPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: Shows what the name of the trail, module, and unit the apprentice had a speedbump on the date listed in the record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What was the name of the trail, module, and unit of the speedbump you ran into today?</inlineHelpText>
    <label>Speedbump trail, module, and unit name?</label>
    <type>TextArea</type>
</CustomField>