force-app/main/default/objects/Reflection_CMPHAM__c/fields/Today_s_Date_CPHAM__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date_CPHAM__c</fullName>
    <description>Created By: CMPHAM
Business Unit: Alphaforce
Purpose: Indicate Today&apos;s Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What&apos;s today&apos;s date?</inlineHelpText>
    <label>Today&apos;s Date</label>
    <type>Date</type>
</CustomField>