force-app/main/default/objects/Reflection_CMPHAM__c/fields/What_did_you_experience_CPHAM__c.field-meta.xml
<CustomField>
    <fullName>What_did_you_experience_CPHAM__c</fullName>
    <description>Created By: CMP
Business Unit: Alphaforce
Purpose: This is where apprentices will input their experience during activities or projects.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What did you experience during activities or projects?</inlineHelpText>
    <label>What did you experience?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>