force-app/main/default/objects/Reflection_CMPHAM__c/fields/What_did_you_observe_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>What_did_you_observe_CMPHAM__c</fullName>
    <description>Created by: CMP
Bushiness Unit: Alphaforce 
Purpose: This shows what the apprentice observed during activities or projects within the group.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What did you observe during activities or projects within the group?</inlineHelpText>
    <label>What did you observe?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>