force-app/main/default/objects/Reflection_CMPHAM__c/fields/What_do_you_need_CMPHAM__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_need_CMPHAM__c</fullName>
    <description>Created By: CMP
Business Unit: Alphaforce
Purpose: This will show what the apprentice needs as support from lead, in general, or within themselves.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What do you need as support from your lead, in general, or within yourself?</inlineHelpText>
    <label>What do you need?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>